dropshot/tests/fail/bad_endpoint3.stderr
error[E0277]: the trait bound `String: Extractable` is not satisfied
  --> $DIR/bad_endpoint3.rs:17:12
   |
11 | / #[endpoint {
12 | |     method = GET,
13 | |     path = "/test",
14 | | }]
   | |__- required by this bound in `need_extractable`
...
17 |       param: String,
   |              ^^^^^^
   |              |
   |              the trait `Extractable` is not implemented for `String`
   |              required by a bound in this

error[E0277]: the trait bound `fn(RequestContext<()>, String) -> impl Future {wrapped_bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> $DIR/bad_endpoint3.rs:11:1
   |
11 | / #[endpoint {
12 | |     method = GET,
13 | |     path = "/test",
14 | | }]
   | |__^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(RequestContext<()>, String) -> impl Future {wrapped_bad_endpoint}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |           FuncParams: Extractor + 'static,
   |                                   ------- required by this bound in `ApiEndpoint::<Context>::new`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
